# OperatingSystems

./: README.md
cpp/: .gitignore  CMakeLists.txt  Simulations.cpp  Simulations.h  main.cpp
cpp/cmake/: GTest.cmake  InstallScript.cmake
cpp/disk-management/: CMakeLists.txt  InstallScript.cmake
cpp/disk-management/include/DiskManagement/: Disk.hpp  DiskCall.hpp  DiskManagement.hpp  DiskManager.hpp  Manager.hpp
cpp/disk-management/src/: Disk.cpp  DiskCall.cpp  DiskManagement.cpp  DiskManager.cpp  Manager.cpp
cpp/disk-management/tests/: CMakeLists.txt  main.gtest.cpp
cpp/page-replacement/: CMakeLists.txt  InstallScript.cmake
cpp/page-replacement/include/PageReplacement/: Algorithm.h
cpp/page-replacement/src/: Algorithm.cpp
cpp/page-replacement/tests/: CMakeLists.txt  main.gtest.cpp
cpp/processes-management/: CMakeLists.txt  InstallScript.cmake
cpp/processes-management/include/ProcessesManagement/: Logger.hpp  Manager.hpp  Process.hpp
cpp/processes-management/src/: Logger.cpp  Manager.cpp  Process.cpp
cpp/processes-management/tests/: CMakeLists.txt  main.gtest.cpp
cpp/utils/: CMakeLists.txt  InstallScript.cmake
cpp/utils/include/CppUtils/: Logger.hpp
cpp/utils/src/: Logger.cpp
cpp/utils/tests/: CMakeLists.txt  main.gtest.cpp
